--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="keywords" content="
-  mathgames66, math games 66.github.io, mathgames66.github.io, mathgames66.github, math games.66.github.io" />
+  Learning." />
   <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
   <script src="scripts/search.js"></script>
   <script src="scripts/script.js"></script>
@@ -15,7 +15,7 @@
   <link rel="stylesheet" type="text/css" href="css/christmas.css">
 
   <title>
-    Mathgames66 - Adfree Unblocked Games
+    Learning.
   </title>
 </head>
 
@@ -102,8 +102,8 @@
     </ul> 
     TODO: Have a basic search list
     -->
-    <h1>mathgames66</h1>
-    <h6>ad-free unblocked games</h6>
+    <h1>Learning</h1>
+    <h6>Have fun while learning.</h6>
 
     <span class="center">
     <!-- <span class="small-text"><br>new games (added this week): Cave War [pc], Drama [mobile/pc]<br><br> -->
@@ -119,82 +119,7 @@
           <b>For Mobile Users (iPad)</b><br>
           If for whatever reason the game does not fit in your screen, <b>tap the "aA" button on the top left of your
             screen, and adjust your page size from 100% to whatever works best.</b>
-        </span> <br><br>
-        <iframe frameBorder="none" height="300" width="500"
-          src="https://docs.google.com/document/d/e/2PACX-1vRgUnh8int3Gb2df5kjUY2LIMFQMS96cV4dXRPr0eYWnflNhD9T90v8IzDvEiejx-QG3_UoJXptykkY/pub?embedded=true"></iframe>
-
-        <br>
-      </span>
-    </span>
-    <br>
-    <span class="center">
-      <a href="submit.html">
-        <button>
-          <span> + submit</span>
-        </button>
-      </a>
-    </span>
-
-    <br>
-
-    <div id="container">
-
-    </div>
-    <footer>
-      <h4>
-        please support
-      </h4>
-      <h1>
-
-        <h6>
-          animated square background <s>stolen</s> from <a class="link" href="https://codepen.io/tokyoweb">@tokyoweb</a>
-          at codepen <br />
-          grid layout <s>stolen</s> from <a class="link" href="https://codepen.io/julesforrest">@julesforrest</a> at
-          codepen <br />
-          <a class="link" href="http://fusejs.io">fuse.js</a> used for the search bar and menu functionality (Copyright
-          &copy 2022 Kiro Risk)
-          <br><br>
-          github repo: <a class="link" href="https://github.com/mathgames66/mathgames66.github.io">
-            mathgames66/mathgames66.github.io </a><br />
-
-          contact: <a href="mailto:mathgames66@mail.com" class="link" type="email">mathgames66@mail.com</a>
-          <br><br>
-        </h6>
-        <span class="center">
-          <div>
-            <a
-              href="https://my.care.org/site/Donation2?df_id=31067&mfc_pref=T&31067.donation=form1&s_src=172220UCF000&_ga=2.157870393.280358710.1647297520-170256829.1647051860">ukraine
-              crisis fund</a>
-          </div><br><br>
-          <h6 id="el1">total site view count ==> </h6>
-          <span id="counter">
-            <img src="https://www.free-website-hit-counter.com/c.php?d=9&id=131796&s=7" border="0">
-          </span>
-        </span>
-        <br>
-        <span class="center">
-          <hr>
-          <br>
-          <h4>site contributors</h4>
-          <span class="small-text">
-            BOB=#1 - promotion <br>
-            BloonTD Addict - uploading <br>
-            <a class="link" href="https://github.com/cohenerickson">cohenerickson</a> - advice <br>
-            guy - trailer editing, advice <br>
-
-            <a class="link" href="https://github.com/henry-lang">henry-lang</a> - advice <br>
-
-            <a class="link" href="https://github.com/xlegends">legends</a> - advice <br>
-            rm - uploading, founding, development <br>
-            thediamondfinder - main development, logos <br>
-            <!-- don't tell rm -->
-            <span class="secret">...and preventing rm from breaking the site...</span><br>
-            <span class="secret"><i>...somewhat successfully...</i></span><br>
-            <span class="secret">70% of the time, <i>which is passing</i></span>
-          </span>
-        </span>
-
-    </footer><br><br><br>
+        </span> 
 
   </div>
   <div class="area">
